[project]
name = "qwen3vl_api"
description = "qwen3vl API Supports batch image or video reverse inference."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["openai>=1.0.0"]

[project.urls]
Repository = "https://github.com/flywhale-666/ComfyUI_QWEN3VL_API"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/flywhale-666/ComfyUI_QWEN3VL_API/wiki"
"Bug Tracker" = "https://github.com/flywhale-666/ComfyUI_QWEN3VL_API/issues"

[tool.comfy]
PublisherId = "flywhale"
DisplayName = "ComfyUI_QWEN3VL_API"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

